# Silver_estimate

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ESTIMATE_ENTRY_REFACTORING_PLAN.md  Gemini.md  INTEGRATION_TESTING_LESSONS.md  PERFORMANCE_OBSERVATIONS.md  PHASE_4_COMPLETION.md  PRESENTER_TESTING_EXAMPLE.md  SETUP_IMPROVEMENTS.md  SilverEstimate.spec  TESTING_IMPROVEMENTS.md  THIRD_PARTY_NOTICES.md  app_constants.py  coverage.tmp.xml  custom_font_dialog.py  database_manager.py  dda_rate_fetcher.py  dev-commands.ps1  estimate_entry.py  estimate_entry_logic.py  estimate_entry_ui.py  estimate_history.py  item_export_manager.py  item_import_dialog.py  item_import_manager.py  item_master.py  item_selection_dialog.py  logger.py  logging-system-technical-guide.md  logging_architecture.md  logging_features.md  logging_guide.md  logging_implementation_plan.md  login_dialog.py  main.py  noxfile.py  print_manager.py  (+18 more)
.claude/: settings.local.json
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-sqlcipher-wheel.yml  main-validation.yml  pr-validation.yml  release-windows.yml
.memory/: refactoring_project_notes.md
DOCS/: ESTIMATE_ENTRY_API.md  ESTIMATE_ENTRY_TEST_COVERAGE.md  PHASE1_BASELINE.md  README.md  UI_UX_RECOMMENDATIONS.md  ai-readme.md  api-reference.md  changelog-archive.md  component-analysis.md  data-model-relationships.md  deployment-guide.md  estimate-entry-refactor-plan.md  estimate_loading_architecture.md  estimate_loading_fix.md  implementation-roadmap.md  logging-guide.md  logging_features.md  logging_implementation_plan.md  modernization-roadmap.md  next-steps-roadmap.md  performance-baseline-thresholds.md  performance-optimization.md  performance-remaining-tasks.md  project-architecture.md  project-audit-suggestions-2026-02-13.md  project-memory-bank.md  project-summary.md  pyside6-migration-execution-plan.md  release-notes-v2.8.9.md  security-architecture.md  testing-implementation-playbook.md  testing-strategy.md  troubleshooting-maintenance.md  workflow-business-logic.md
database/: estimation.db
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/memory/: query_20260715_130218_this_progroma_is_installed_only_on_1_system_find_a.md  query_20260715_131553_do_safe_cleanup_now_and_likely_removable_after_a_f.md  query_20260715_140012_update_the_docs__github_page_etc.md  query_20260715_150111_i_have_used_the_latest_build_to_start_the_db_and_p.md  query_20260715_150633_why_are_the_consolidate_the_database_path__and_mig.md  query_20260716_061912_db_which_is_in_the_root_folder_of_exe_should_we_us.md  query_20260716_063920_program_does_start_very_fast_but_since_user_cannot.md  query_20260716_080132_now_all_the_older_db_setttings_etc_have_been_migra.md  query_20260716_080757_what_about_migrate_qsettings_and_retire_legacy_enc.md  query_20260723_151019_all_systems_have_been_runnign_the_latest_version_o.md
graphify-out/reflections/: LESSONS.md
pyinstaller_hooks/: hook-qtawesome.py
scripts/: augment_release_sbom.py  build_sqlcipher_wheel.ps1  build_windows.ps1  build_windows_local.cmd  build_windows_local.ps1  check_perf_budgets.py  check_startup_budgets.py  generate_migration_pdf_evidence.py  run_performance_gate.py  validate_frozen_artifact.py  validate_pyside_deployment.py  verify_sqlcipher_runtime.py
silverestimate/: exceptions.py
silverestimate/controllers/: live_rate_controller.py  navigation_controller.py  startup_controller.py
silverestimate/domain/: estimate_models.py  estimate_totals.py  item_validation.py  pagination.py
silverestimate/infrastructure/: app_constants.py  application.py  data_migration.py  db_session.py  item_cache.py  latest_request_runner.py  logger.py  main_window_runtime.py  paths.py  qt_bootstrap.py  settings.py  sqlite_worker.py  windows_integration.py
silverestimate/persistence/: database_driver.py  database_lifecycle.py  database_manager.py  database_repository_facade.py  database_startup.py  encrypted_database_store.py  estimates_repository.py  flush_scheduler.py  items_repository.py  migrations.py  repository_results.py  schema.py  silver_bar_command_repository.py  silver_bar_query_repository.py  silver_bar_synchronization_repository.py  silver_bars_queries.py  silver_bars_repository.py  silver_bars_snapshot_repository.py  sqlite_database_runtime.py  storage_metadata.py  temp_database_store.py
silverestimate/presenter/: __init__.py  estimate_entry_presenter.py
silverestimate/security/: credential_store.py  encrypted_envelope.py  encryption.py  password_service.py
silverestimate/services/: auth_service.py  dda_rate_fetcher.py  dda_rate_stream.py  estimate_calculator.py  estimate_entry_persistence.py  estimate_repository.py  item_catalog_transfer.py  item_import_parser.py  live_rate_service.py  main_commands.py  navigation_service.py  settings_service.py
silverestimate/ui/: _host_proxy.py  application_theme.py  custom_font_dialog.py  display_formatting.py  estimate_classic_renderer.py  estimate_entry.py  estimate_entry_facade.py  estimate_entry_layout_controller.py  estimate_entry_logic.py  estimate_entry_table_controller.py  estimate_entry_theme.py  estimate_entry_totals_controller.py  estimate_entry_ui.py  estimate_entry_workflow_controller.py  estimate_history.py  estimate_print_document.py  estimate_print_layout.py  estimate_print_renderer.py  estimate_table_formatting.py  font_dialogs.py  icons.py  inline_status.py  item_export_manager.py  item_import_dialog.py  item_import_manager.py  item_master.py  item_selection_dialog.py  login_dialog.py  main_window.py  message_bar.py  modern_components.py  numeric_font.py  preview_build_worker.py  print_format_spec.py  print_manager.py  print_page_settings.py  print_payload_builder.py  print_preview_controller.py  settings_dialog.py  settings_live_rates_page.py  (+21 more)
tests/: conftest.py  legacy_envelope_writer.py  test_repositories.py  test_security.py
tests/controllers/: test_live_rate_controller.py
(+128 files in other folders)
