[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silverestimate"
dynamic = ["version"]
description = "A desktop application for managing silver sales estimates with encrypted data storage"
readme = "readme.md"
requires-python = ">=3.13"
license = {text = "Proprietary"}
authors = [
    {name = "Silver Estimation App", email = "noreply@silverestimate.app"}
]
keywords = ["silver", "estimation", "inventory", "pyqt5", "encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Framework :: PyQt5",
    "Topic :: Office/Business",
]

dependencies = [
    "PyQt5>=5.15.10",
    "qtawesome>=1.4.1",
    "cryptography>=42.0.0",
    "passlib[argon2]>=1.7.4",
    "argon2_cffi>=21.3.0",
    "keyring>=24.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
    # Code Quality
    "ruff>=0.15.5",
    "mypy>=1.5.0",
    "nox>=2024.4.15",
    # Pre-commit hooks
    "pre-commit>=3.3.0",
    # Type stubs
    "PyQt5-stubs>=5.15.6",
    # Development tools
    "pyinstaller>=6.0.0",
    "bandit[toml]>=1.7.9",
    "safety>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/kta136/Silver_estimate"
Documentation = "https://github.com/kta136/Silver_estimate/tree/main/DOCS"
Repository = "https://github.com/kta136/Silver_estimate"
"Bug Tracker" = "https://github.com/kta136/Silver_estimate/issues"

[tool.setuptools.dynamic]
version = {attr = "silverestimate.infrastructure.app_constants.APP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["silverestimate*"]
exclude = ["tests*", "scripts*", "build*", "dist*"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/ui/test_estimate_entry_integration.py" = ["F841"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true once type hints are added
disallow_incomplete_defs = false  # Set to true once type hints are added
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = [
    "^build/",
    "^dist/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = [
    "PyQt5.*",
    "qtawesome.*",
    "qtpy.*",
    "keyring.*",
    "passlib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "silverestimate.domain.estimate_models",
    "silverestimate.domain.item_validation",
    "silverestimate.infrastructure.app_constants",
    "silverestimate.infrastructure.paths",
    "silverestimate.infrastructure.settings",
    "silverestimate.persistence.temp_database_store",
    "silverestimate.persistence.encrypted_database_store",
    "silverestimate.persistence.database_startup",
    "silverestimate.persistence.items_repository",
    "silverestimate.security.encryption",
    "silverestimate.security.credential_store",
    "silverestimate.services.estimate_calculator",
    "silverestimate.services.estimate_repository",
    "silverestimate.persistence.flush_scheduler",
    "silverestimate.persistence.migrations",
    "silverestimate.persistence.database_lifecycle",
    "silverestimate.persistence.silver_bars_queries",
    "silverestimate.persistence.silver_bars_snapshot_repository",
    "silverestimate.persistence.sqlite_database_runtime",
    "silverestimate.presenter.estimate_entry_presenter",
    "silverestimate.infrastructure.application",
    "silverestimate.ui._host_proxy",
    "silverestimate.ui.estimate_entry_components.primary_actions_bar",
    "silverestimate.ui.estimate_entry_components.secondary_actions_bar",
    "silverestimate.ui.estimate_entry_logic.constants",
    "silverestimate.ui.view_models.estimate_entry_view_model",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--capture=no",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[tool.coverage.run]
source = ["silverestimate"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B601",  # paramiko_calls - not using paramiko
]
