[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silverestimate"
dynamic = ["version"]
description = "A desktop application for managing silver sales estimates with encrypted data storage"
readme = "readme.md"
requires-python = ">=3.14,<3.15"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "Silver Estimation App", email = "noreply@silverestimate.app"}
]
keywords = [
    "silver",
    "estimation",
    "inventory",
    "pyside6",
    "qt6",
    "sqlcipher",
    "windows",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Office/Business",
]

dependencies = [
    "PySide6>=6.11.1,<6.12",
    "argon2-cffi>=25.1.0,<26",
    "keyring>=24.3.0",
    "sqlcipher3==0.6.2+silverestimate.4.17.0.1; sys_platform == 'win32'",
]

[tool.uv.sources]
sqlcipher3 = { path = "vendor/sqlcipher/sqlcipher3-0.6.2+silverestimate.4.17.0.1-cp314-cp314-win_amd64.whl" }

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
    # Code Quality
    "ruff>=0.15.5",
    "mypy>=1.5.0",
    "nox>=2024.4.15",
    # Pre-commit hooks
    "pre-commit>=3.3.0",
    # Development tools
    "Nuitka==4.1.3",
    "zstandard==0.25.0",
    "bandit[toml]>=1.7.9",
    "safety>=3.7.0",
    "diff-cover>=9.7.1",
    "cyclonedx-bom>=7.2.1",
]

[project.urls]
Homepage = "https://github.com/kta136/Silver_estimate"
Documentation = "https://github.com/kta136/Silver_estimate/tree/main/DOCS"
Repository = "https://github.com/kta136/Silver_estimate"
"Bug Tracker" = "https://github.com/kta136/Silver_estimate/issues"

[tool.setuptools.dynamic]
version = {attr = "silverestimate.infrastructure.app_constants.APP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["silverestimate*"]
exclude = ["tests*", "scripts*", "build*", "dist*"]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E9",
    "F",
    "I",
    "B",
    "SIM",
    "PERF",
    "C90",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/ui/test_estimate_entry_integration.py" = ["F841"]
"tests/**/*.py" = ["PLR0913", "PLR0915"]
"silverestimate/controllers/live_rate_controller.py" = ["PLR0913"]
"silverestimate/controllers/navigation_controller.py" = ["PLR0915"]
"silverestimate/controllers/startup_controller.py" = ["C901", "PLR0911", "PLR0912"]
"silverestimate/domain/estimate_totals.py" = ["PLR0913"]
"silverestimate/infrastructure/application.py" = ["PLR0912", "PLR0913"]
"silverestimate/infrastructure/logger.py" = ["PLR0913"]
"silverestimate/infrastructure/windows_integration.py" = ["PLR0911"]
"silverestimate/persistence/database_repository_facade.py" = ["PLR0913"]
"silverestimate/persistence/estimates_repository.py" = ["PLR0913"]
"silverestimate/persistence/items_repository.py" = ["PLR0911", "PLR0912"]
"silverestimate/persistence/database_manager.py" = ["PLR0915"]
"silverestimate/persistence/silver_bars_queries.py" = ["PLR0913", "PLR0915"]
"silverestimate/persistence/silver_bars_repository.py" = ["C901", "PLR0912", "PLR0913", "PLR0915"]
"silverestimate/persistence/silver_bars_snapshot_repository.py" = ["PLR0913"]
"silverestimate/security/encryption.py" = ["PLR0913"]
"silverestimate/services/auth_service.py" = ["C901", "PLR0911", "PLR0912", "PLR0915"]
"silverestimate/services/dda_rate_stream.py" = ["PLR0913"]
"silverestimate/services/estimate_repository.py" = ["PLR0913"]
"silverestimate/ui/custom_font_dialog.py" = ["PLR0915"]
"silverestimate/ui/estimate_entry.py" = ["PLR0915"]
"silverestimate/ui/estimate_entry_components/secondary_actions_bar.py" = ["PLR0915"]
"silverestimate/ui/estimate_entry_components/voucher_toolbar.py" = ["PLR0915"]
"silverestimate/ui/estimate_entry_layout_controller.py" = ["PLR0915"]
"silverestimate/ui/estimate_entry_ui.py" = ["PLR0912"]
"silverestimate/ui/estimate_history.py" = ["PLR0915"]
"silverestimate/ui/estimate_print_renderer.py" = ["C901", "PLR0912", "PLR0913", "PLR0915"]
"silverestimate/ui/item_master.py" = ["PLR0915"]
"silverestimate/ui/item_selection_dialog.py" = ["PLR0915"]
"silverestimate/ui/login_dialog.py" = ["PLR0915"]
"silverestimate/ui/main_window.py" = ["PLR0912"]
"silverestimate/ui/models/*.py" = ["B008", "C901", "PLR0911", "PLR0912"]
"silverestimate/ui/print_payload_builder.py" = ["PLR0913"]
"silverestimate/ui/print_preview_controller.py" = ["PLR0915"]
"silverestimate/ui/settings_dialog.py" = ["C901", "PLR0911", "PLR0912", "PLR0915"]
"silverestimate/ui/shared_screen_theme.py" = ["PLR0913"]
"silverestimate/ui/silver_bar_history.py" = ["PLR0915"]
"silverestimate/ui/silver_bar_list_print_controller.py" = ["PLR0913"]
"silverestimate/ui/silver_bar_load_controller.py" = ["PLR0912"]
"silverestimate/ui/silver_bar_management.py" = ["PLR0915"]
"silverestimate/ui/silver_bar_management_ui.py" = ["PLR0915"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true once type hints are added
disallow_incomplete_defs = false  # Set to true once type hints are added
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
disable_error_code = ["union-attr"]
exclude = [
    "^build/",
    "^dist/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = [
    "keyring.*",
    "sqlcipher3.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "silverestimate.domain.estimate_models",
    "silverestimate.domain.item_validation",
    "silverestimate.infrastructure.app_constants",
    "silverestimate.infrastructure.paths",
    "silverestimate.infrastructure.settings",
    "silverestimate.persistence.database_driver",
    "silverestimate.persistence.storage_metadata",
    "silverestimate.persistence.items_repository",
    "silverestimate.security.encryption",
    "silverestimate.security.credential_store",
    "silverestimate.services.estimate_calculator",
    "silverestimate.services.estimate_repository",
    "silverestimate.persistence.schema",
    "silverestimate.persistence.silver_bars_queries",
    "silverestimate.persistence.silver_bars_snapshot_repository",
    "silverestimate.presenter.estimate_entry_presenter",
    "silverestimate.infrastructure.application",
    "silverestimate.ui._host_proxy",
    "silverestimate.ui.estimate_entry_components.primary_actions_bar",
    "silverestimate.ui.estimate_entry_components.secondary_actions_bar",
    "silverestimate.ui.estimate_entry_logic.constants",
    "silverestimate.ui.view_models.estimate_entry_view_model",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "silverestimate.domain.pagination",
    "silverestimate.infrastructure.latest_request_runner",
    "silverestimate.persistence.silver_bar_command_repository",
    "silverestimate.persistence.silver_bar_query_repository",
    "silverestimate.persistence.repository_results",
    "silverestimate.persistence.silver_bar_synchronization_repository",
    "silverestimate.services.dda_rate_fetcher",
    "silverestimate.services.dda_rate_stream",
    "silverestimate.ui.estimate_entry_facade",
    "silverestimate.ui.print_format_spec",
    "silverestimate.ui.settings_live_rates_page",
    "silverestimate.ui.silver_bar_management_facade",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
qt_api = "pyside6"
addopts = [
    "--verbose",
    "--capture=no",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "smoke: marks opt-in smoke tests that exercise full application startup",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["silverestimate"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
